Theme and configuration changes.

--- a/theme/templates/archives.html
+++ b/theme/templates/archives.html
@@ -3,7 +3,7 @@
 {% block title %}{{ SITENAME }} - Archives{% endblock %}
 
 {% block content %}
-  <h1>Archives for {{ SITENAME }}</h1>
+  <h1>Archives</h1>
   {#
     I'm not sure that the use of dl, dt, and ddhere is correct.  This
     is not a list of descriptions and the date is not the term whose
