--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -1,33 +1,56 @@
 @charset "UTF-8";
 
-body > header > nav {
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 40em;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: helvetica,arial,x-locale-body,sans-serif;
+  line-height: 1.25;
+  font-size: 100%;
+}
+
+a {
+    color: black;
+}
+
+body > header {
+  /*
+    We need to set flex here so that the border-bottom on
+    body>header>nav covers the nav menu instead of the whole width of
+    the body.
+   */
     display: flex;
-    flex-direction: row;
     justify-content: center;
+    flex-direction: row;
     align-items: center;
+}
+
+body > header > nav {
+    font-variant: small-caps;
     padding-bottom: 1em;
     padding-top: 1em;
-    font-variant: small-caps;
+    border-bottom: .1em solid black;
 }
 
 body > header > nav > a {
+    /* Browsers default "a" style is often blue and underline. */
+    color: black;
+    text-decoration: none;
+    letter-spacing: .1rem;
+    font-size: 1.2rem;
+    font-weight: bold;
     padding-left: 1em;
     padding-right: 1em;
 }
 
+/* TODO: not sure if this is still working. */
 @media screen and (max-width: 40em) {
-    body > header > nav {
+    body > header {
         flex-direction: column;
     }
-}
-
-body > main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    max-width: 40em;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 body > footer {
